# seren-acp-claude

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/acp/: mod.rs  server.rs
src/claude/: client.rs  mod.rs
