[package]
name = "seren-acp-claude"
version = "0.1.3"
edition = "2024"
rust-version = "1.90"
authors = ["SerenAI <hello@serendb.com>"]
description = "ACP agent bridging the Agent Client Protocol to Claude Code CLI"
license = "MIT"
repository = "https://github.com/serenorg/seren-acp-claude"
readme = "README.md"
keywords = ["acp", "claude", "agent", "anthropic", "cli"]
categories = ["development-tools", "api-bindings"]

[lib]
name = "seren_acp_claude"
path = "src/lib.rs"

[[bin]]
name = "seren-acp-claude"
path = "src/main.rs"

[dependencies]
# ACP Protocol - official trait-based SDK
agent-client-protocol = { version = "0.9", features = ["unstable"] }

# Claude Agent SDK - spawns and communicates with Claude Code CLI
claude-agent-sdk-rs = { git = "https://github.com/serenorg/claude-agent-sdk-rs" }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "process", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
